--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -10,24 +10,30 @@
 
 
     <TextView
-        android:layout_width="310dp"
+        android:id="@+id/graduation"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat"
         android:text="Graduation Details"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="17sp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:drawableRight="@drawable/bottomarrow"/>
+        android:layout_marginBottom="20dp"
+        android:drawableRight="@drawable/bottomarrow"
+        android:background="@drawable/squareblue"
+        android:padding="10dp"
+        />
 
     <LinearLayout
+        android:id="@+id/graduationlayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <EditText
-            android:id="@+id/course_name"
+            android:id="@+id/course_name1"
             android:layout_width="320dp"
             android:layout_height="40dp"
             android:hint="Course Name"
@@ -47,7 +53,7 @@
             />
 
         <EditText
-            android:id="@+id/university_name"
+            android:id="@+id/university_name1"
             android:layout_width="320dp"
             android:layout_height="40dp"
             android:hint="University Name"
@@ -67,7 +73,7 @@
             />
 
         <EditText
-            android:id="@+id/majors"
+            android:id="@+id/majors1"
             android:layout_width="320dp"
             android:layout_height="40dp"
             android:hint="Majors"
@@ -86,20 +92,175 @@
             android:paddingLeft="10dp"
             />
 
-        <TextView
-            android:layout_width="310dp"
-            android:layout_height="wrap_content"
-            android:text="Completion Month and Year"
-            android:fontFamily="@font/montserrat"
-            android:textSize="14sp"
+        <EditText
+            android:id="@+id/completion1"
+            android:layout_width="320dp"
+            android:layout_height="40dp"
+            android:hint="Completion Date"
+            android:background="@drawable/squareblue"
+            android:ems="10"
+            android:layout_centerHorizontal="true"
+            android:textSize="16sp"
             android:textStyle="bold"
-            android:textColor="@color/white"/>
-
-
-
+            android:inputType="text"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/montserrat"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            />
 
     </LinearLayout>
 
+
+    <TextView
+        android:id="@+id/post_graduation"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat"
+        android:text="Post Graduation Details"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:drawableRight="@drawable/bottomarrow"
+        android:background="@drawable/squareblue"
+        android:padding="10dp"
+        />
+
+    <LinearLayout
+        android:id="@+id/post_graduation_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <EditText
+            android:id="@+id/course_name2"
+            android:layout_width="320dp"
+            android:layout_height="40dp"
+            android:hint="Course Name"
+            android:background="@drawable/squareblue"
+            android:ems="10"
+            android:layout_centerHorizontal="true"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:inputType="text"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/montserrat"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            />
+
+        <EditText
+            android:id="@+id/university_name2"
+            android:layout_width="320dp"
+            android:layout_height="40dp"
+            android:hint="University Name"
+            android:background="@drawable/squareblue"
+            android:ems="10"
+            android:layout_centerHorizontal="true"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:inputType="text"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/montserrat"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            />
+
+        <EditText
+            android:id="@+id/majors2"
+            android:layout_width="320dp"
+            android:layout_height="40dp"
+            android:hint="Majors"
+            android:background="@drawable/squareblue"
+            android:ems="10"
+            android:layout_centerHorizontal="true"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:inputType="text"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/montserrat"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            />
+
+        <EditText
+            android:id="@+id/completion2"
+            android:layout_width="320dp"
+            android:layout_height="40dp"
+            android:hint="Completion Date"
+            android:background="@drawable/squareblue"
+            android:ems="10"
+            android:layout_centerHorizontal="true"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:inputType="text"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/montserrat"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            />
+
+    </LinearLayout>
+
+
+    <EditText
+        android:id="@+id/pan_card"
+        android:layout_width="320dp"
+        android:layout_height="40dp"
+        android:hint="Pan Card Number"
+        android:background="@drawable/squareblue"
+        android:ems="10"
+        android:layout_centerHorizontal="true"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:inputType="text"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/montserrat"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:padding="10dp"
+        android:paddingLeft="10dp"
+        android:drawablePadding="10dp"
+        />
+
+
+    <EditText
+        android:id="@+id/aadhar_card"
+        android:layout_width="320dp"
+        android:layout_height="40dp"
+        android:hint="AAdhar Card Number"
+        android:background="@drawable/squareblue"
+        android:ems="10"
+        android:layout_centerHorizontal="true"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:inputType="text"
+        android:layout_marginBottom="40dp"
+        android:fontFamily="@font/montserrat"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:padding="10dp"
+        android:paddingLeft="10dp"
+        android:drawablePadding="10dp"
+        />
 
 
     <Button
