--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -172,27 +172,39 @@
         </LinearLayout>
 
 
+
         <LinearLayout
-            android:id="@+id/dc"
+            android:layout_toRightOf="@+id/wealth"
+            android:id="@+id/pay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="40dp"
+            android:orientation="vertical"
+            android:gravity="center"
             android:layout_marginRight="40dp"
-            android:layout_toRightOf="@+id/wealth">
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="7dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="66dp"
-                android:layout_height="66dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 app:civ_border_width="2dp"
                 app:civ_border_color="@color/blue"
-                android:src="@drawable/dc"/>
+                android:src="@drawable/money"
+                />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/pay"
+                android:textColor="@color/white"
+                android:fontFamily="@font/montserrat" />
         </LinearLayout>
 
 
+
+
         <LinearLayout
-            android:layout_toRightOf="@+id/dc"
+            android:layout_toRightOf="@+id/pay"
             android:id="@+id/cash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -206,7 +218,7 @@
                 android:layout_height="50dp"
                 app:civ_border_width="2dp"
                 app:civ_border_color="@color/blue"
-                android:src="@drawable/money"
+                android:src="@drawable/rupee"
                 />
 
             <TextView
