--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -9,10 +9,14 @@
     android:background="@color/black"
     android:gravity="center">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/otp"
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:lottie_rawRes="@raw/otp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         android:layout_marginBottom="10dp"
         />
 
