--- a/app/src/main/res/layout/activity_screen_1.xml
+++ b/app/src/main/res/layout/activity_screen_1.xml
@@ -1,47 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    tools:context=".Onboarding.Screen_1">
-
-
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/tv1"
-        android:layout_margin="30dp"
-        android:layout_alignParentRight="true"
+        android:id="@+id/skipBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Skip"
-        android:textColor="@color/white"
-        android:layout_centerHorizontal="true"
+        android:layout_margin="16dp"
         android:fontFamily="@font/montserrat"
+        android:text="Skip"
+        android:elevation="4dp"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
-        />
+        android:layout_alignParentEnd="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp" />
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"/>
 
-        <TextView
-            android:layout_marginTop="30dp"
-            android:layout_below="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/we_are"
-            android:textColor="@color/white"
-            android:layout_centerHorizontal="true"
-            android:fontFamily="@font/montserrat"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            />
-
+    <LinearLayout
+        android:id="@+id/dotIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
