--- a/app/src/main/res/layout/activity_screen_4.xml
+++ b/app/src/main/res/layout/activity_screen_4.xml
@@ -27,14 +27,13 @@
             android:id="@+id/tv4"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:text="@string/click_here"
-            android:textColor="@color/white"
-           android:layout_margin="10dp"
+            android:layout_margin="10dp"
             android:fontFamily="@font/montserrat"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:text="@string/click_here"
             android:textAlignment="center"
-        />
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
