--- a/app/src/main/res/layout/view_pager_layout.xml
+++ b/app/src/main/res/layout/view_pager_layout.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Onboarding.Screen_1">
+    tools:context=".Onboarding.OnBoardingScreen">
 
     <ImageView
         android:id="@+id/image"
